Support for D3 dendrogram.

--- a/css/facetview.css
+++ b/css/facetview.css
@@ -75,3 +75,18 @@
     margin:0 5px 0 5px;
 }
 
+.node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+
+.node {
+    font: 10px sans-serif;
+}
+    
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
+}
